# full-adder

./: README.md  full-adder.cabal
app/: Main.hs
src/: Adder.hs  Binary.hs  Logic.hs
test/: AdderSpec.hs  BinarySpec.hs  LogicSpec.hs
