name:                full-adder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/auroq/full-adder#readme
license:             BSD3
license-file:        LICENSE
author:              Parker Johansen
maintainer:          johansen.parker@gmail.com
copyright:           Copyright (c) 2019 Parker Johansen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Adder
                     , Binary
                     , Logic
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable full-adder
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , full-adder
  default-language:    Haskell2010

test-suite full-adder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , full-adder
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/auroq/full-adder
